# humane

./: .dockerignore  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yml  pyproject.toml  serve.py  web_dashboard.py
humanclaw/: __init__.py  __main__.py  conductor.py  guard.py  sequencer.py
humanclaw/cli/: dashboard.py  demo.py  main.py  wizard.py
humanclaw/core/: config.py  events.py  store.py
humanclaw/engines/: __init__.py  anomaly.py  dissent.py  goal_abandon.py  human_state.py  impulse.py  inaction_guard.py  memory_decay.py  relational.py  social_risk.py  values.py
humane/: __init__.py  __main__.py  ab_testing.py  agent_comms.py  auth.py  branching.py  categorizer.py  conductor.py  digest.py  encryption.py  feedback_loop.py  gdpr.py  goal_templates.py  guard.py  insights.py  io.py  multi.py  openapi.py  plugins.py  retention.py  sequencer.py  smart_schedule.py  webhooks.py
humane/api/: server.py
humane/bot/: brain.py  conversation.py  scheduler.py  telegram_bot.py  voice.py  whatsapp_bot.py
humane/cli/: dashboard.py  demo.py  main.py  wizard.py
humane/core/: config.py  events.py  models.py  store.py
humane/engines/: __init__.py  anomaly.py  dissent.py  goal_abandon.py  (+7 more)
presets/: business_safe.yaml
tests/: test_ab_testing.py  test_analytics.py  test_api.py  test_auth.py  test_brain.py  test_branching.py  test_categorizer.py  test_conductor.py  test_config.py  test_conversation_history.py  test_digest.py  test_gdpr.py  test_human_state.py  test_impulse.py  test_inaction_guard.py  test_insights.py  test_io.py  test_multi_agent.py  test_plugins.py  test_retention.py  test_smart_schedule.py  test_voice.py  test_webhooks.py
(+5 files in other folders)
